# mh-structlog

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: python-package.yml
scripts/: gen_ref_pages.py
src/mh_structlog/: __init__.py  aws.py  config.py  django.py  processors.py  utils.py
structlog_logging/: __init__.py  config.py  django.py
structlog_logging.egg-info/: PKG-INFO  SOURCES.txt
tests/: conftest.py  root_urlconf.py  test_aws.py  test_config.py  test_django.py  test_init.py  test_logging.py  test_processors.py  utils.py
